# src/server.py
@@ -1,8 +1,6 @@
-# Initilize Logging
+# Initialize Logging
 import logging
 
-from src.routes.path_routes import create_path_routes
-from src.routes.topic_routes import create_topic_routes
 from src.utils.ejson_encoder import MongoJSONEncoder
 logging.basicConfig(level=logging.INFO)
 logger = logging.getLogger(__name__)
@@ -13,10 +11,10 @@ from flask import Flask
 from prometheus_flask_exporter import PrometheusMetrics
 from src.config.config import config
 from src.utils.mongo_io import MongoIO
-from src.routes.COLLECTION_routes import create_COLLECTION_routes
+from src.routes.encounter_routes import create_encounter_routes
 from src.routes.config_routes import create_config_routes
 
-# Initilize Flask App
+# Initialize Flask App
 app = Flask(__name__)
 app.json = MongoJSONEncoder(app)
 
@@ -30,11 +28,11 @@ metrics.info('app_info', 'Application info', version=config.api_version)
 
 # Initialize Route Handlers
 config_handler = create_config_routes()
-COLLECTION_handler = create_COLLECTION_routes()
+encounter_handler = create_encounter_routes()
 # TODO Other handlers as needed
 
 # Register routes
-app.register_blueprint(COLLECTION_handler, url_prefix='/api/COLLECTION')
+app.register_blueprint(encounter_handler, url_prefix='/api/encounter')
 app.register_blueprint(config_handler, url_prefix='/api/config')
 # TODO Other routes as needed
 
